# game-review-pipeline

./: pyproject.toml  setup.sh
automation/: audio.py  captions.py  cli.py  folder_setup.py  metadata.py  utils.py  watcher.py
config/: default.yaml
docs/: design.md  resolve-template-guide.md
examples/: review_notes.txt
templates/audacity/: voice-clean-macro.txt
templates/obs/: README.md  dual-canvas.json
