[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-review-pipeline"
version = "0.1.0"
description = "Automated pre-editing pipeline for game review videos"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
gemini = ["google-generativeai"]
claude = ["anthropic"]
ollama = ["requests"]

[project.scripts]
pipeline = "automation.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["automation"]
